unpackaged/main/default/objects/Engagement_Expense__c/Engagement_Expense__c.object-meta.xml
<CustomObject>
    <label>Engagement Expense</label>
    <nameField>
        <displayFormat>EXP-{YYYY}{MM}{DD}:{00000000}</displayFormat>
        <label>Expense #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>