unpackaged/main/default/objects/Engagement_Expense__c/fields/Concur_Line_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Concur_Line_Item_Id__c</fullName>
    <label>Concur Line Item Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>