unpackaged/main/default/objects/Engagement_Expense__c/fields/Concur_Report_Id__c.field-meta.xml
<CustomField>
    <fullName>Concur_Report_Id__c</fullName>
    <label>Concur Report Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>