unpackaged/main/default/objects/Engagement_Expense__c/fields/Dimension_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Dimension_1_Name__c</fullName>
    <formula>Dimension_1__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dimension 1 Name</label>
    <type>Text</type>
</CustomField>