unpackaged/main/default/objects/Engagement_Expense__c/fields/Dimension_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Dimension_2_Name__c</fullName>
    <formula>Dimension_2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dimension 2 Name</label>
    <type>Text</type>
</CustomField>