unpackaged/main/default/objects/Engagement_Expense__c/fields/Dimension_3_Name__c.field-meta.xml
<CustomField>
    <fullName>Dimension_3_Name__c</fullName>
    <formula>Dimension_3__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dimension 3 Name</label>
    <type>Text</type>
</CustomField>