unpackaged/main/default/objects/Engagement_Expense__c/fields/Discard_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discard_Reason__c</fullName>
    <label>Discard Reason</label>
    <type>TextArea</type>
</CustomField>