unpackaged/main/default/objects/Engagement_Expense__c/fields/Discarded__c.field-meta.xml
<CustomField>
    <fullName>Discarded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use this if the expense needs to be denoted as invalid for any reason.</inlineHelpText>
    <label>Discarded?</label>
    <type>Checkbox</type>
</CustomField>