unpackaged/main/default/objects/Engagement_Expense__c/fields/Engagement_Activity__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Activity</label>
    <referenceTo>Engagement_Activity__c</referenceTo>
    <relationshipLabel>Activity Expenses</relationshipLabel>
    <relationshipName>Activity_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>