unpackaged/main/default/objects/Engagement_Expense__c/fields/Engagement_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Attendee</label>
    <referenceTo>Engagement_Attendee__c</referenceTo>
    <relationshipLabel>Engagement Expenses</relationshipLabel>
    <relationshipName>Engagement_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>