unpackaged/main/default/objects/Engagement_Expense__c/fields/Engagement_Expense_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Expense_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Expense ID (18)</label>
    <type>Text</type>
</CustomField>