unpackaged/main/default/objects/Engagement_Expense__c/fields/Expense_Name__c.field-meta.xml
<CustomField>
    <fullName>Expense_Name__c</fullName>
    <label>Expense Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>