unpackaged/main/default/objects/Engagement_Expense__c/fields/Expense_URL__c.field-meta.xml
<CustomField>
    <fullName>Expense_URL__c</fullName>
    <formula>&quot;/&quot; &amp;  Id</formula>
    <label>Expense URL</label>
    <type>Text</type>
</CustomField>