unpackaged/main/default/objects/Engagement_Expense__c/fields/General_Ledger_ID__c.field-meta.xml
<CustomField>
    <fullName>General_Ledger_ID__c</fullName>
    <label>General Ledger ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>