unpackaged/main/default/objects/Engagement_Expense__c/fields/Load_Switch_code__c.field-meta.xml
<CustomField>
    <fullName>Load_Switch_code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Load Switch (code)</label>
    <type>Checkbox</type>
</CustomField>