unpackaged/main/default/objects/Engagement_Expense__c/fields/Payable_Account__c.field-meta.xml
<CustomField>
    <fullName>Payable_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payable Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Billing_Account__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Payable Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Engagement Expenses</relationshipLabel>
    <relationshipName>Engagement_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>