unpackaged/main/default/objects/Engagement_Expense__c/fields/Payable_Invoice_Expense_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Payable_Invoice_Expense_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payable Invoice Expense Line Item</label>
    <referenceTo>c2g__codaPurchaseInvoiceExpenseLineItem__c</referenceTo>
    <relationshipLabel>Engagement Expenses</relationshipLabel>
    <relationshipName>Engagement_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>