unpackaged/main/default/objects/Engagement_Expense__c/fields/Payment_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type_Id__c</fullName>
    <label>Payment Type Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>