unpackaged/main/default/objects/Engagement_Expense__c/fields/Spend_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Spend_Category_Name__c</fullName>
    <label>Spend Category Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>