unpackaged/main/default/objects/Engagement_Expense__c/fields/Submitted_by__c.field-meta.xml
<CustomField>
    <fullName>Submitted_by__c</fullName>
    <label>Submitted by</label>
    <length>128</length>
    <type>Text</type>
</CustomField>