unpackaged/main/default/objects/Engagement_Expense__c/recordTypes/Activity_Expense.recordType-meta.xml
<RecordType>
    <fullName>Activity_Expense</fullName>
    <active>true</active>
    <label>Activity Expense</label>
</RecordType>