unpackaged/main/default/objects/Engagement_Expense__c/recordTypes/Attendee_Adjustment.recordType-meta.xml
<RecordType>
    <fullName>Attendee_Adjustment</fullName>
    <active>true</active>
    <label>Attendee Adjustment</label>
</RecordType>