unpackaged/main/default/objects/Engagement_Expense__c/recordTypes/Engagement_Adjustment.recordType-meta.xml
<RecordType>
    <fullName>Engagement_Adjustment</fullName>
    <active>true</active>
    <label>Engagement Adjustment</label>
</RecordType>