unpackaged/main/default/objects/Engagement_Expense__c/recordTypes/Standard_Expense.recordType-meta.xml
<RecordType>
    <fullName>Standard_Expense</fullName>
    <active>true</active>
    <label>Standard Expense</label>
</RecordType>