unpackaged/main/default/objects/Engagement_Expense__c/validationRules/If_Discarded_Need_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Discarded_Need_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(Discarded__c = TRUE,Discard_Reason__c = NULL),
AND(Discarded__c = TRUE,LEN(Discard_Reason__c)&lt;10
))</errorConditionFormula>
    <errorMessage>Reason is required or is less than 10 characters in length!</errorMessage>
</ValidationRule>