unpackaged/main/default/objects/Engagement_Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Engagement__c</columns>
    <columns>Payable_Account__c</columns>
    <columns>Submitted_by__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>GL_Name__c</columns>
    <columns>Payment_Type_Name__c</columns>
    <columns>Dimension_2_Name__c</columns>
    <columns>Concur_Line_Item_Id__c</columns>
    <columns>Concur_Report_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>